--- a/gs-rest-service/initial/src/main/resources/templates/user.html
+++ b/gs-rest-service/initial/src/main/resources/templates/user.html
@@ -5,11 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Registration Form</h1>
-<form action="#" th:action="@{/user}" th:object="${user}" method="post">
-    <p>Email: <input type="email" th:field="*{email}" /></p>
-    <p>Password: <input type="password" th:field="*{password}" /></p>
-    <p><input type="submit" value="Register" /></p>
-</form>
+<h1>This is your bank account</h1>
+<p th:text="'Hello, ' + ${user.email}" />
+<p th:text="'Your password is ' + ${user.password}" />
+<!--<p th:text="'Your cash balance is ' + ${deposit.balance}" />-->
+<button>
+    <a href="/deposit">Deposit money</a>
+</button>
+
 </body>
 </html>
