--- a/gs-rest-service/initial/src/main/resources/templates/deposit.html
+++ b/gs-rest-service/initial/src/main/resources/templates/deposit.html
@@ -7,13 +7,16 @@
 <body>
 <h1>TRYING DEPOSIT</h1>
 
-<form action="#" th:action="@{/deposit}" th:object="${user}" method="post">
+<!--<form action="#" th:action="@{/deposit}" th:object="${user}" method="post">-->
     <!--<p>Enter balance you wish: <input type="number" th:field="*{balance}" /></p>-->
     <!--<p th:text="'Your current balance is: ' + *{email}" />-->
     <!--<p>Your currnet balance is: <input type="email" th:field="*{email}" /></p>-->
     <!--<p>Your currnet balance is: <input type="number" th:field="*{balance}" /></p>-->
+    <!--<p th:text="'Hello, ' + *{user.email}" />-->
+<!--</form>-->
 
-</form>
+<p th:text="'Hello, ' + ${user.email}" />
+
 
 </body>
 </html>
